WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236208
[GTK] D-Bus crash atk-bridge
https://bugs.webkit.org/show_bug.cgi?id=236208
Summary
[GTK] D-Bus crash atk-bridge
kailueke
Reported
2022-02-06 14:16:51 PST
It can happen at any time but after it happend it is likely to happen directly again a few seconds after app startup that it crashes with the following error printed on the console: ``` (WebKitWebProcess:2): dbind-WARNING **: 22:39:12.184: AT-SPI: Error retrieving accessibility bus address: org.freedesktop.DBus.Error.ServiceUnknown: org.freedesktop.DBus.Error.ServiceUnknown dbus[10454]: arguments to dbus_message_new_method_call() were incorrect, assertion "destination == NULL || _dbus_check_is_valid_bus_name (destination)" failed in file ../../../dbus/dbus-message.c line 1364. This is normally a bug in some application using the D-Bus library. D-Bus not built with -rdynamic so unable to print a backtrace (WebKitWebProcess:2): WPE-FDO-ERROR **: 22:39:16.262: Failed to bind wpe_bridge ``` Originally reported in
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=995420
and in
https://gitlab.gnome.org/GNOME/epiphany/-/issues/1694
- maybe this even needs to go to the atk lib. Here is the full backtrace:
https://paste.debian.net/1229712
Attachments
Patch
(4.50 KB, patch)
2022-02-15 02:45 PST
,
Carlos Garcia Campos
aperez
: review+
aperez
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2022-02-15 02:40:04 PST
It seems that for some reason we can end up with an empty string as plug ID and ATK doesn't handle it right. We can validate the plug id returned by ATK and not call BindAccessibilityTree if it's not valid.
Carlos Garcia Campos
Comment 2
2022-02-15 02:45:29 PST
Created
attachment 452008
[details]
Patch
Adrian Perez
Comment 3
2022-02-15 04:16:09 PST
Comment on
attachment 452008
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=452008&action=review
> Source/WebCore/ChangeLog:8 > + When a root is unregitered, check first if the registration is still pending to just complete and remove it.
Typo: s/unregitered/unregistered/
Carlos Garcia Campos
Comment 4
2022-02-15 06:07:59 PST
Committed
r289804
(
247269@trunk
): <
https://commits.webkit.org/247269@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug