[GTK] D-Bus crash atk-bridge https://bugs.webkit.org/show_bug.cgi?id=236208

Reviewed by Adrian Perez de Castro.

Source/WebCore:

When a root is unregistered, check first if the registration is still pending to just complete and remove it.

* accessibility/atspi/AccessibilityAtspi.cpp:
(WebCore::AccessibilityAtspi::unregisterRoot):

Source/WebKit:

It seems that for some reason we might end up with an empty string as plug ID which ATK doesn't handle right. We
should not send the BindAccessibilityTree message if the plug ID is not valid. In the case of ATSPI we can just
check it's not empty, since we know we always build a valid ID when we have a connection. In the case of ATK we
should check it's a valid unique name and object path.

* WebProcess/WebPage/gtk/WebPageGtk.cpp:
(WebKit::WebPage::platformInitialize):


Canonical link: https://commits.webkit.org/247269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289804 268f45cc-cd09-0410-ab3c-d52691b4dbfc