Source/WebKit/WebProcess/WebPage/gtk/WebPageGtk.cpp
@@ -64,9 +64,28 @@ void WebPage::platformInitialize(const WebPageCreationParameters&)
     // process to connect the two worlds through the accessibility
     // object there specifically placed for that purpose (the socket).
 #if USE(ATK)
+    auto isValidPlugID = [](const char* plugID) -> bool {
+        if (!plugID || plugID[0] != ':')
+            return false;
+
+        auto* p = g_strrstr(plugID, ":");
+        if (!p)
+            return false;
+
+        if (!g_variant_is_object_path(p + 1))
+            return false;
+
+        GUniquePtr<char> name(g_strndup(plugID, p - plugID));
+        if (!g_dbus_is_unique_name(name.get()))
+            return false;
+
+        return true;
+    };
+
     m_accessibilityObject = adoptGRef(webkitWebPageAccessibilityObjectNew(this));
     GUniquePtr<gchar> plugID(atk_plug_get_id(ATK_PLUG(m_accessibilityObject.get())));
-    send(Messages::WebPageProxy::BindAccessibilityTree(String(plugID.get())));
+    if (isValidPlugID(plugID.get()))
+        send(Messages::WebPageProxy::BindAccessibilityTree(String(plugID.get())));
 #elif USE(ATSPI)
 #if USE(GTK4)
     // FIXME: we need a way to connect DOM and app a11y tree in GTK4.
@@ -74,7 +93,8 @@ void WebPage::platformInitialize(const WebPageCreationParameters&)
     if (auto* page = corePage()) {
         m_accessibilityRootObject = AccessibilityRootAtspi::create(*page);
         m_accessibilityRootObject->registerObject([&](const String& plugID) {
-            send(Messages::WebPageProxy::BindAccessibilityTree(plugID));
+            if (!plugID.isEmpty())
+                send(Messages::WebPageProxy::BindAccessibilityTree(plugID));
         });
     }
 #endif
